fix style on mobile view

--- a/style/style.scss
+++ b/style/style.scss
@@ -613,6 +613,7 @@ body{
         &-content{
             width: 100%;
             padding: 10px;
+            border-radius: 0;
 
             img{
                 display: none;
